--- a/client/sass/layout/_article.scss
+++ b/client/sass/layout/_article.scss
@@ -268,6 +268,9 @@ section.container section.space section.content{
 //                             text-overflow: ellipsis;
                             max-height: $typeHeaderLeading * 4;
                             overflow: hidden;
+                            margin-left: $headerLeftMarginOffset;
+                            padding-bottom: .125em;
+                            margin-bottom: -.125em;
 //                             @include multiline-ellipsis($typeHeaderLeading * 3, $typeHeaderLeading, 1em);
                         }
     
